plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.2'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.daesoo'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation'
	//compile fileTree(dir: 'libs', include: ['*.jar'])
	implementation files('libs/JNBT_1.5.jar')
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '3.2.1'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	
	implementation 'org.springframework.boot:spring-boot-starter-security'
	testImplementation 'org.springframework.security:spring-security-test'
	
	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
	
	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
    implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
    
    implementation group: 'org.springframework.cloud', name: 'spring-cloud-gcp-starter', version: '1.2.5.RELEASE'
	implementation group: 'org.springframework.cloud', name: 'spring-cloud-gcp-storage', version: '1.2.5.RELEASE'
	
	implementation group: 'commons-io', name: 'commons-io', version: '2.15.1'
	
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
	
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	
	implementation 'net.sandrohc:schematic4j:1.1.0'
	
	
}

tasks.named('test') {
	useJUnitPlatform()
}
